--- a/template/home.html
+++ b/template/home.html
@@ -60,16 +60,12 @@
                     </div>
                       
                     <div class="image">
-                        <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
-                          <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Forest" width="500" height="500">
-                        </a>
+                          <img src="{{ pic2 }}" alt="Forest" width="500" height="500">
                         <div class="desc">Add a description of the image here</div>
                     </div>
                       
                     <div class="image">
-                        <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
-                          <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Northern Lights" width="500" height="500">
-                        </a>
+                          <img src="{{ pic3 }}" alt="Northern Lights" width="500" height="500">
                         <div class="desc">Add a description of the image here</div>
                     </div>
                 
