--- a/template/messages.html
+++ b/template/messages.html
@@ -33,38 +33,46 @@
 </body>
 
 <div class="page-content page-container" id="page-content">
-    <div class="padding">
-        <div class="row container d-flex justify-content-center">
+  <div class="padding">
+      <div class="row container d-flex justify-content-center">
 <div class="col-md-6">
-            <div class="card card-bordered">
-              <div class="card-header">
-                <h4 class="card-title"><strong>Chat</strong></h4>
-                <a class="btn btn-xs btn-secondary" href="#" data-abc="true">Let's Chat App</a>
-              </div>
+          <div class="card card-bordered">
+            <div class="card-header">
+              <h4 class="card-title"><strong>Chat</strong></h4>
+              <a class="btn btn-xs btn-secondary" href="#" data-abc="true">Let's Chat App</a>
+            </div>
 
 
-              <div class="ps-container ps-theme-default ps-active-y" id="chat-content" style="overflow-y: scroll !important; height:400px !important;">
-                <div class="media media-chat">
-                  <div class="media-body">
-                    
-                  </div>
+            <div class="ps-container ps-theme-default ps-active-y" id="chat-content" style="overflow-y: scroll !important; height:400px !important;">
+              <div class="media media-chat">
+                <img class="avatar" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
+                <div class="media-body">
+                  <p id="text"></p>
                 </div>
-                
-
-              <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; height: 0px; right: 2px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 2px;"></div></div></div>
-
-              <div class="publisher bt-1 border-light">
-                <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
-                <input class="publisher-input" type="text" placeholder="Write something">
-                
-                <a class="publisher-btn" href="#" data-abc="true"><i class="fa fa-smile"></i></a>
-                <a class="publisher-btn text-info" href="#" data-abc="true"><i class="fa fa-paper-plane"></i></a>
               </div>
 
-             </div>
-          </div>
-          </div>
-          </div>
-          </div>
+              
+
+            <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;"><div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div></div><div class="ps-scrollbar-y-rail" style="top: 0px; height: 0px; right: 2px;"><div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 2px;"></div></div></div>
+
+            <div class="publisher bt-1 border-light">
+              <img class="avatar avatar-xs" src="https://img.icons8.com/color/36/000000/administrator-male.png" alt="...">
+              <input class="publisher-input" type="text" Id = userInput placeholder="Write something" onFocus="this.value=''">
+              <button onclick="showMessage()" type="button" class="btn">Send</button>
+            </div>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+
+<script>
+  function showMessage() {
+  var textBox = document.getElementById("text").value;
+  var message = document.getElementById("userInput").value;
+  document.getElementById("text").innerHTML = message;
+  document.getElementById("userInput").innerHTML = ""
+  }
+</script>
 
 </html>
