--- a/template/home.html
+++ b/template/home.html
@@ -9,7 +9,7 @@
 </head>
 
 <header>
-    <div id="home"><a href="home">Home</a></div>
+    <div id="home"><a href="home"><img class="logo" src="Connected(2).png"></a></div>
 
     <div id="nav">
         <nav>
