--- a/template/profileeditor.html
+++ b/template/profileeditor.html
@@ -27,7 +27,7 @@
         <form action="home.html">
 
             <div class="column left">
-                <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" id="profile-pic">
+                <img src="{{ pfp }}" id="profile-pic">
                 <label class="image-label" for="input-file">Update Image</label>
                 <input class="image-input" type="file" name="pfpInput" accept="image/png, image/jpg, image/jpeg" id="input-file">
                 
