--- a/template/profile.html
+++ b/template/profile.html
@@ -8,7 +8,7 @@
 
 
 <header>
-  <div id="home"><a href="home">Home</a></div>
+  <div id="home"><a href="home"><img class="logo" src="Connected(2).png"></a></div>
 
   <div id="nav">
       <nav>
