changed to jinja

--- a/template/profileeditor.html
+++ b/template/profileeditor.html
@@ -64,7 +64,7 @@
                 </select>
 
                 <label for="bio" id="label-bio">Bio</label>
-                <input type="text" id="bioInput" name="bioInput" placeholder="Talk about yourself!">
+                <input type="text" id="bioInput" name="bioInput" placeholder="{{ bio }}">
             </div>
 
             <div class="column right">
